# npm-cli

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-RESEARCH.md  API-DISCOVERY.md
.planning/phases/02-connection-auth/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md
.planning/phases/03-proxy-host-management/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md
.planning/phases/04-ssl-automation/: 04-RESEARCH.md
.planning/phases/04-ssl-certificate-automation/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md
.planning/phases/05-configuration-templates/: 05-01-PLAN.md  05-01-SUMMARY.md
.planning/phases/06-testing-documentation/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-RESEARCH.md
.planning/phases/07-distribution/: 07-01-PLAN.md  07-01-SUMMARY.md
.planning/phases/08-proxy-clone-command/: 08-01-PLAN.md  08-01-SUMMARY.md
images/: .gitkeep
src/npm_cli/api/: __init__.py  client.py  (+1 more)
tests/: conftest.py  test_api_client.py  test_api_client_mocked.py  test_api_exceptions.py  test_certificate_models.py  test_cli_integration.py  test_clone.py  test_config.py  test_docker_discovery.py  test_integration_setup.py  test_npm_client_certificates.py  test_npm_client_proxy.py  test_proxy_models.py  test_templates.py
(+5 files in other folders)
