[project]
name = "npm-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dan", email = "dan@zumper.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "rich>=14.2.0",
    "typer>=0.21.0",
]

[project.scripts]
npm-cli = "npm_cli.__main__:main"

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
